# PhpyStand

./: .gitignore  CMakeLists.txt  README.md  main.cpp  stdafx.h
docs/: 手把手教你玩qt.md
